# cmd/app/main.go
@@ -14,20 +14,30 @@ import (
 func main() {
 	db := database.InitDB()
 
-	repo := repository.NewTaskRepository(db)
-	srv := service.NewTaskService(repo)
-	handler := handlers.NewTaskHandler(srv)
+	tasksRepo := repository.NewTaskRepository(db)
+	taskService := service.NewTaskService(tasksRepo)
+	taskHandler := handlers.NewTaskHandler(taskService)
+
+	usersRepo := repository.NewUserRepository(db)
+	userService := service.NewUserService(usersRepo)
+	userHandler := handlers.NewUserHandler(userService)
 
 	e := echo.New()
 
 	e.Use(middleware.Logger())
 	e.Use(middleware.CORS())
 
-	e.POST("/tasks", handler.PostTasks)
-	e.GET("/tasks", handler.GetAllTasks)
-	e.GET("/tasks/:id", handler.GetTaskByID)
-	e.PUT("/tasks/:id", handler.PatchTasksId)
-	e.DELETE("/tasks/:id", handler.DeleteTask)
+	e.POST("/tasks", taskHandler.PostTasks)
+	e.GET("/tasks", taskHandler.GetAllTasks)
+	e.GET("/tasks/:id", taskHandler.GetTaskByID)
+	e.PUT("/tasks/:id", taskHandler.PatchTasksId)
+	e.DELETE("/tasks/:id", taskHandler.DeleteTask)
+
+	e.POST("/users", userHandler.CreateUser)
+	e.GET("/users", userHandler.GetAllUsers)
+	e.GET("/users/:id", userHandler.GetUserByID)
+	e.PUT("/users/:id", userHandler.UpdateUser)
+	e.DELETE("/users/:id", userHandler.DeleteUser)
 
 	if err := e.Start(":8080"); err != nil {
 		log.Fatalf("failed to start: %v", err)
