# terminal/models/user.go
@@ -1,0 +1,12 @@
+package models
+
+import "time"
+
+type User struct {
+	ID        int        `json:"id"`
+	Email     string     `json:"email"`
+	Password  string     `json:"password"`
+	CreatedAt time.Time  `json:"created_at"`
+	UpdatedAt time.Time  `json:"updated_at"`
+	DeletedAt *time.Time `json:"deleted_at,omitempty"`
+}
